--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,13 +288,25 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-@media (max-width: 425px){
+@media (max-width: 425px) {
     #hero h1, p {
         text-align: center;
     }
 
     .btn-hero {
         margin-left: 30px;
+        text-align: center;
+    }
+
+    .section-title h2 {
+        text-align: center;
+    }
+
+    .section-title h2::after {
+        margin-left: 80px;
+    }
+
+    .portfolio-description h2 {
         text-align: center;
     }
 }
@@ -641,56 +653,6 @@ section {
 
 .contact .php-email-form .form-group {
   padding-bottom: 8px;
-}
-
-.contact .php-email-form .validate {
-  display: none;
-  color: red;
-  margin: 0 0 15px 0;
-  font-weight: 400;
-  font-size: 13px;
-}
-
-.contact .php-email-form .error-message {
-  display: none;
-  color: #fff;
-  background: #ed3c0d;
-  text-align: left;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .error-message br + br {
-  margin-top: 25px;
-}
-
-.contact .php-email-form .sent-message {
-  display: none;
-  color: #fff;
-  background: #18d26e;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .loading {
-  display: none;
-  background: #fff;
-  text-align: center;
-  padding: 15px;
-}
-
-.contact .php-email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
-  -webkit-animation: animate-loading 1s linear infinite;
-  animation: animate-loading 1s linear infinite;
 }
 
 .contact .php-email-form .form-group {
