--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ a {
   color: #ffcd00;
   text-decoration: none;
 }
-
+                                                                        /* ARREGLAR BARRAS SUBRAYADO TITULO SECCIONES */
 a:hover {
   color: #ffcd00;
   text-decoration: none;
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 9997;
   transition: all 0.5s;
   padding: 0 15px;
-  background: #121404;
+  background: #141414;
   overflow-y: auto;
 }
 
@@ -208,6 +208,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 100vh;
   background: url("../img/bg.jpg") top center;
   background-size: cover;
+  /* background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../img/closeup-shot-of-beautiful-dandelion.jpg") top center; */
 }
 
 #hero:before {
@@ -298,17 +299,6 @@ h1, h2, h3, h4, h5, h6 {
         text-align: center;
     }
 
-    .section-title h2 {
-        text-align: center;
-    }
-
-    .section-title h2::after {
-        margin-left: 80px;
-    }
-
-    .portfolio-description h2 {
-        text-align: center;
-    }
 }
 
 /*--------------------------------------------------------------
@@ -562,6 +552,10 @@ section {
 
 .portfolio-details .portfolio-description p {
   padding: 0;
+}
+
+.swiper-slide img{
+    border: 3px solid #000000;
 }
 
 /*--------------------------------------------------------------
