Proyecto agregado, favicoin agregado, compresion de imagenes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,6 +432,7 @@ section {
   position: relative;
   overflow: hidden;
   z-index: 1;
+  border: 3px solid #000000;
 }
 
 .portfolio .portfolio-wrap::before {
