--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,8 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
+
+  transition: all 0.4s;
 }
 
 a {
@@ -145,7 +147,7 @@ h1, h2, h3, h4, h5, h6 {
   white-space: nowrap;
 }
 
-.nav-menu a {
+.nav-menu a, .darkmode-switch {
   display: flex;
   align-items: center;
   color: #a8a9b4;
@@ -155,10 +157,14 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 15px;
 }
 
-.nav-menu a i {
+.nav-menu a i, .moon {
   font-size: 24px;
   padding-right: 8px;
   color: #6f7180;
+}
+
+.moon:before {
+    padding-left: 2px;
 }
 
 .nav-menu a:hover, .nav-menu .active, .nav-menu li:hover > a {
@@ -208,7 +214,6 @@ h1, h2, h3, h4, h5, h6 {
   height: 100vh;
   background: url("../img/bg.jpg") top center;
   background-size: cover;
-  /* background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../img/closeup-shot-of-beautiful-dandelion.jpg") top center; */
 }
 
 #hero:before {
@@ -323,7 +328,6 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #000000;
 }
 
 .section-title h2::after {
@@ -568,7 +572,7 @@ section {
 
 .contact .info {
   padding: 30px;
-  background: #fff;
+  background: rgb(255, 255, 255);
   width: 100%;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
 }
@@ -670,6 +674,7 @@ section {
 
 .contact .php-email-form textarea {
   padding: 10px 15px;
+  background: ;
 }
 
 @-webkit-keyframes animate-loading {
@@ -733,4 +738,132 @@ section {
   .breadcrumbs ol li {
     display: inline-block;
   }
+}
+
+/* DarkMode Switch */
+.theme-switch-wrapper {
+    display: flex;
+    align-items: center;
+}
+.theme-switch-wrapper em {
+    margin-right: 10px;
+    font-size: 15px;
+    color: #a8a9b4;
+    font-style: normal;
+}
+
+.theme-switch {
+    display: inline-block;
+    height: 16px;
+    position: relative;
+    width: 30px;
+}
+
+.theme-switch input {
+    display: none;
+}
+
+.slider {
+    background-color: #ccc;
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: 0.4s;
+}
+
+.slider:before {
+    background-color: #fff;
+    bottom: 1px;
+    content: "";
+    height: 14px;
+    left: 2px;
+    position: absolute;
+    transition: 0.4s;
+    width: 15px;
+}
+
+input:checked + .slider {
+    background-color: #ffcd00;
+}
+
+input:checked + .slider:before {
+    transform: translateX(10px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+/* DarkMode */
+body.darkmode {
+    background-color: rgb(7, 7, 7)!important;
+    color: white;
+}
+
+.darkmode input:checked + .slider {
+    background-color: #ffcd00;
+}
+
+.darkmode input:checked + .slider:before {
+    transform: translateX(10px);
+}
+
+.darkmode .portfolio {
+    background: rgb(33, 33, 33);
+}
+
+.darkmode .linkedin-aboutme {
+    color: white;
+}
+
+.darkmode .linkedin-aboutme:hover{
+    color: #ffcd00;
+}
+
+.darkmode .gslide-description {
+    background: rgb(33, 33, 33);
+}
+
+.darkmode .gslide-title {
+    color: white;
+}
+
+.darkmode .portfolio-wrap {
+    border: none;
+}
+
+.darkmode .info, .darkmode .php-email-form {
+    background: rgb(33, 33, 33);
+}
+
+.darkmode .contact .info h4, .darkmode .contact .info p {
+    color: white;
+}
+
+.darkmode .breadcrumbs {
+    background:rgb(33, 33, 33);
+}
+
+.darkmode .breadcrumbs ol li + li::before {
+    color: white;
+}
+
+.darkmode .portfolio-info {
+    background: rgb(33, 33, 33);
+}
+
+.darkmode .swiper-slide img {
+    border: none;
+}
+
+.darkmode .contact .php-email-form input, .darkmode .contact .php-email-form textarea {
+    background: rgb(121, 121, 121);
+    color: white;
 }
