Proyecto agregado, eliminación archivos y comentarios innecesarios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header .profile .social-links a:hover {
   background: #ffcd00;
-  color: #ffcd00;
+  color: #ffffff;
   text-decoration: none;
 }
 
